imports and preprocess function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
 	"cSpell.words": [
+		"CIFAR",
 		"dtype",
 		"Keras",
 		"ndarray",
+		"numpy",
+		"preprocesses",
 		"softmax"
 	],
 	"cSpell.ignoreWords": [
